canary/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts:
  - canary.aryan.kishor
  http:
  - route:
    - destination:
        host: nginx-canary
        subset: canary
      weight: 10
    - destination:
        host: nginx-stable
        subset: stable
      weight: 90
